my_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api
  namespace: tp
  labels:
    appName: api
spec:
  containers:
  - name: api
    image: registry.cluster.wik.cloud/public/echo 
    ports:
    - containerPort: 8080
