service.yaml
###############
#SERVICE

apiVersion: v1
kind: Service
metadata:
  namespace: tp
  name: my-service
spec:
  selector:
    app.kubernetes.io/name: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
